# zed-extension-rag-command

./: Cargo.toml  README.md  extension.toml  extension.wasm
src/: zed_rag.rs
