[package]
name = "zed_rag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/zed_rag.rs"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
# Use the local version of the Zed extension API, for local testing and development:
zed_extension_api = { path = "../../crates/extension_api" }
# For published version, use:
# zed_extension_api = "0.2.0"
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "=1.0.133"
